Fix T92575: Cycles black pixels when rendering with > 65k samples

Differential Revision: https://developer.blender.org/D13039